# TapeScrape

./: .gitignore  CLAUDE.md  IDEA.md  README.md  project.yml
TapeScrape/: Info.plist  TapeScrapeApp.swift
TapeScrape.xcodeproj/: project.pbxproj
TapeScrape/Downloads/: DownloadManager.swift
TapeScrapeTests/: CatalogClientTests.swift  PlaybackCoordinatorTests.swift  TapeScrapeTests.swift
TapeScrapeUITests/: TapeScrapeUITests.swift
backend/: main.py  pyproject.toml
backend/aggregation/: aggregate.py  canonicalize.py  orchestrate.py  source_quality.py  venue.py
backend/core/: cache.py  config.py  http_client.py  logging.py
backend/db/: models.py  repository.py
backend/ia/: metadata.py  search.py
backend/models/: concert.py  ia.py  search.py
backend/routes/: concerts.py  deps.py  search.py
backend/tests/: conftest.py  helpers.py  test_health.py
backend/tests/aggregation/: test_aggregate.py  test_canonicalize.py  test_orchestrate.py  test_source_quality.py  test_venue.py
backend/tests/core/: test_cache.py  test_http_client.py
backend/tests/db/: test_repository.py
backend/tests/fixtures/: gd1977-05-08.aud.moore.berger.28354.flac16_metadata.json  gd1977-05-08_search.json
backend/tests/ia/: test_metadata.py  test_search.py
backend/tests/models/: test_ia.py
backend/tests/routes/: test_concerts.py  test_search.py
docs/: development_roadmap.md  roadmap_status.md
memory/: MEMORY.md  swiftui-openurl.md  test-targets-infoplist.md  xcodegen-infoplist.md
workflow/: CONVENTIONS.md  PACKET_TEMPLATE.md  SUMMARY_TEMPLATE.md  WORKFLOW.md
(+86 files in other folders)
